# RPMPLv2

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  package.xml
.devcontainer/: devcontainer.json
.docker/: Dockerfile
.github/workflows/: rpmplv2.yaml
apps/: CMakeLists.txt  CommonFunctions.h  generate_dataset.cpp  generate_random_scenarios.cpp  test_drgbt.cpp  test_drgbt_benchmark.cpp  test_drgbt_random_obstacles.cpp  test_drgbtconnect_benchmark.cpp  test_fcl_distance.cpp  test_kdl_parser.cpp  test_nanoflann.cpp  test_obstacle_parsing.cpp  test_planar_2dof.cpp  test_rbtconnect.cpp  test_real_vector_space.cpp  test_rgbmtstar.cpp  test_rgbmtstar_benchmark.cpp  test_rgbtconnect.cpp  test_rrtconnect.cpp  test_rrtconnect_benchmark.cpp  test_rrtx.cpp  test_rrtx_dynamic.cpp  test_rrtx_random_obstacles.cpp  test_rt_rgbt.cpp  test_trajectory.cpp  test_xarm6.cpp
cmake/: FindFlann.cmake  Findfcl.cmake.BAK
data/configurations/: configuration_drgbt.yaml  configuration_drgbtconnect.yaml  configuration_rbtconnect.yaml  configuration_realvectorspace.yaml  configuration_rgbmtstar.yaml  configuration_rgbtconnect.yaml  configuration_rrtconnect.yaml  configuration_rrtx.yaml  configuration_rt_rgbt.yaml  configuration_spline5.yaml  configuration_splines.yaml  configuration_trajectory.yaml
data/planar_10dof/: planar_10dof.urdf
data/planar_10dof/scenario1/: scenario1.yaml
data/planar_10dof/scenario2/: scenario2.yaml
data/planar_10dof/scenario_test/: scenario_test.yaml
data/planar_2dof/: planar_2dof.urdf
data/planar_2dof/scenario1/: scenario1.yaml
data/planar_2dof/scenario2/: scenario2.yaml
data/planar_2dof/scenario3/: scenario3.yaml
data/planar_2dof/scenario_random_obstacles/: random_scenarios.yaml  scenario_random_obstacles.yaml
data/planar_2dof/scenario_real_time/: scenario_real_time.yaml
data/planar_2dof/scenario_test/: scenario_test.yaml
data/spatial_10dof/: spatial_10dof.urdf  spatial_10dof_v2.urdf
data/spatial_10dof/scenario1/: scenario1.yaml
data/spatial_10dof/scenario_random_obstacles/: random_scenarios.yaml  scenario_random_obstacles.yaml  scenario_test.yaml
data/spatial_14dof/: spatial_14dof.urdf
data/spatial_14dof/scenario1/: scenario1.yaml
data/spatial_14dof/scenario_random_obstacles/: random_scenarios.yaml  scenario_random_obstacles.yaml
data/spatial_18dof/: spatial_18dof.urdf
data/spatial_18dof/scenario1/: scenario1.yaml
data/spatial_18dof/scenario_random_obstacles/: random_scenarios.yaml  scenario_random_obstacles.yaml
data/spatial_22dof/: spatial_22dof.urdf
data/spatial_22dof/scenario1/: scenario1.yaml
data/spatial_22dof/scenario_random_obstacles/: random_scenarios.yaml  scenario_random_obstacles.yaml
data/xarm6/: scenario3-1.yaml  xarm6-original.urdf  xarm6vis.urdf
data/xarm6/collision/: base.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
data/xarm6/scenario1/: scenario1.yaml
data/xarm6/scenario2/: scenario2.yaml
data/xarm6/scenario3/: scenario3.yaml
data/xarm6/scenario_random_obstacles/: scenario1.scene  scenario_random_obstacles.yaml  (+3 more)
include/benchmark/: Benchmark.h
include/common/: Vector.h
include/configurations/: CommandLine.h  ConfigurationReader.h  DRGBTConfig.h  DRGBTConnectConfig.h  RBTConnectConfig.h  RGBMTStarConfig.h  RGBTConnectConfig.h  RRTConnectConfig.h  RRTxConfig.h  RT_RGBTConfig.h  RealVectorSpaceConfig.h  Spline5Config.h  SplinesConfig.h  TrajectoryConfig.h
include/environments/: Box.h  Environment.h  Object.h
include/planners/: AbstractPlanner.h  PlannerInfo.h  PlannerType.h  PlanningTypes.h
include/robots/: AbstractRobot.h  Planar10DOF.h  Planar2DOF.h  Spatial10DOF.h  Spatial14DOF.h  Spatial18DOF.h  Spatial22DOF.h  xArm6.h
include/scenario/: Scenario.h
include/state_spaces/: State.h  StateSpace.h  StateSpaceType.h  Tree.h
src/: CMakeLists.txt  main.cpp
src/benchmark/: Benchmark.cpp
src/common/: Vector.cpp
src/configurations/: CommandLine.cpp  ConfigurationReader.cpp  DRGBTConfig.cpp  DRGBTConnectConfig.cpp  RBTConnectConfig.cpp  RGBMTStarConfig.cpp  RGBTConnectConfig.cpp  RRTConnectConfig.cpp  RRTxConfig.cpp  RT_RGBTConfig.cpp  RealVectorSpaceConfig.cpp  Spline5Config.cpp  SplinesConfig.cpp  TrajectoryConfig.cpp
src/environments/: Environment.cpp  Object.cpp
src/environments/objects/: Box.cpp
src/planners/: AbstractPlanner.cpp  PlannerInfo.cpp  PlannerType.cpp  PlanningTypes.cpp
src/planners/drbt/: DRGBT.cpp  DRGBTConnect.cpp  HorizonState.cpp  RT_RGBT.cpp  Splines.cpp  checkMotionValidity.cpp  replanning.cpp  updateCurrentState.cpp
src/planners/rbt/: PatternTree.cpp  RBTConnect.cpp  RGBTConnect.cpp
src/planners/rbt_star/: RGBMTStar.cpp
src/planners/rrt/: RRTConnect.cpp
src/planners/rrtx/: RRTx.cpp
src/planners/trajectory/: AbstractTrajectory.cpp  CompositeSpline.cpp  MotionValidity.cpp  Spline.cpp  Spline4.cpp  Spline5.cpp  Splines.cpp  Trajectory.cpp  TrajectoryRuckig.cpp  UpdatingState.cpp
src/robots/: AbstractRobot.cpp  Planar10DOF.cpp  Planar2DOF.cpp  Spatial10DOF.cpp  Spatial14DOF.cpp  Spatial18DOF.cpp  Spatial22DOF.cpp  xArm6.cpp
src/scenario/: Scenario.cpp
src/state_spaces/: State.cpp  StateSpace.cpp  StateSpaceType.cpp  Tree.cpp
src/state_spaces/real_vector_space/: CollisionAndDistance.cpp  RealVectorSpace.cpp  RealVectorSpaceFCL.cpp  RealVectorSpaceState.cpp
tests/: CMakeLists.txt  main_test.cpp  test_realvectorspacestate.cpp  test_vectorf.cpp  test_vectorf.h  tests_realvectorspacestate.h
visualizer/: log_parser.py  planar_10dof_vis.py  planar_2dof_vis.py  requirements.txt  run_visualizer.py  run_visualizer_planar_10dof.py  run_visualizer_planar_2dof.py  run_visualizer_spatial_10dof.py  run_visualizer_xarm6.py  spatial_10dof_vis.py  test_xarm6.py  visualizer.kv  visualizer_app.py  xarm6_vis.py
visualizer/planar_10dof/: planar_10dof.py
visualizer/planar_2dof/: planar_2dof.py
visualizer/spatial_10dof/: spatial_10dof.py
visualizer/state_spaces/: compound_space.py  real_vector_space.py  so2.py  so3.py  state_space.py  test_spaces.py
visualizer/xarm6/: xarm6.py
(+39 files in other folders)
